--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -22,7 +22,7 @@ jobs:
           # extended: true
 
       - name: Build
-        run: hugo --minify
+        run: hugo --minify -e dev
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
@@ -30,6 +30,10 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./public
+          cname: hugo-practice.fleuri.fr
+
+      - name: Build
+        run: hugo --minify
 
       - name: Deploy to photos
         uses: peaceiris/actions-gh-pages@v3
@@ -38,4 +42,5 @@ jobs:
           deploy_key: ${{ secrets.SPORT_PHOTOS_FLEURI_FR }}
           external_repository: fredericfleuri/sport.photos.fleuri.fr
           publish_dir: ./public
+          cname: sport.photos.fleuri.fr
 
